更新代码至gateway

--- a/config-client/src/main/resources/application.yml
+++ b/config-client/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 spring:
   application:
-    name: config-git
+    name: config-client
+    cloud:
+      bus:
+        trace:
+          enable: true
+        enable: true
 server:
   port: 13000
